Fix biometric identifier screen render type