@@ -60,7 +60,7 @@ public class BiometricIdentifierRenderer implements BlockEntityRenderer<Biometri
             poseStack.mulPose(Axis.YN.rotationDegrees(facing.toYRot()));
             poseStack.mulPose(Axis.XP.rotationDegrees(25));
             float offset = 0.4F * (0.5F - quadraticCurve(Math.min(0.05F + renderState.animation / 50F, 0.5F)));
-            float alpha = Math.max(0, Math.min(-1F + renderState.animation / 4F, 1));
+            float alpha = Math.clamp(-1F + renderState.animation / 4F, 0, 1);
             poseStack.translate(-0.5, -0.65 - offset, -0.5 - offset * 0.6);
             poseStack.translate(0.5, 0.5, 0.5);
             poseStack.scale(0.85F, 0.85F, 0.85F);
